# ITGyryTest

./: README.md  dataBase.ddl
app/: Dockerfile  docker-compose.yaml  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 4ac82053d688_change_constranis.py  c1f745e15f13_create_ordersitems.py  dd8ea6a1a88f_add_all_models.py  efbf29d45f40_all_models.py
app/src/: main.py
app/src/api/: routers.py
app/src/api/endpoints/: __init__.py  order.py
app/src/core/: base.py  settings.py
app/src/db/: db.py
app/src/models/: __init__.py  categories.py  clients.py  orders.py  ordersItems.py  product.py
app/src/schemas/: order.py
app/src/utils/: add_data_db.py
sql_query/: 2_1.ddl  2_2.ddl  2_3_1.ddl  2_3_2.ddl
